--- a/web/sites/nextbet/config/sync/core.entity_view_display.taxonomy_term.arcade_game_categories.default.yml
+++ b/web/sites/nextbet/config/sync/core.entity_view_display.taxonomy_term.arcade_game_categories.default.yml
@@ -3,11 +3,15 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.taxonomy_term.arcade_game_categories.field_add_to_secondary_menu
+    - field.field.taxonomy_term.arcade_game_categories.field_arcade_category_icon
     - field.field.taxonomy_term.arcade_game_categories.field_game_categories_alias
     - field.field.taxonomy_term.arcade_game_categories.field_game_categories_disable
     - field.field.taxonomy_term.arcade_game_categories.field_game_categories_new
+    - field.field.taxonomy_term.arcade_game_categories.field_is_ordinary_category
     - taxonomy.vocabulary.arcade_game_categories
   module:
+    - image
     - text
 id: taxonomy_term.arcade_game_categories.default
 targetEntityType: taxonomy_term
@@ -21,6 +25,25 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_add_to_secondary_menu:
+    weight: 4
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
+  field_arcade_category_icon:
+    weight: 5
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
+    region: content
   field_game_categories_alias:
     weight: 2
     label: above
@@ -41,6 +64,16 @@ content:
     region: content
   field_game_categories_new:
     weight: 3
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
+  field_is_ordinary_category:
+    weight: 6
     label: above
     settings:
       format: default
